V4 (#17)
* alter proof table schema, add proper metadata for v4 to proof gen

* large proof_id refactor

* further proof id additions

* update pkg versions and remove comment

* update lock files for core proof v4

* use k1 curve instead of backdoored r1 for ecdsa key

* ignore json marshal/unmarshal of core public keys
